--- a/config.ini.Template
+++ b/config.ini.Template
@@ -1,7 +1,7 @@
 [#Config]
 PRINTLOGFLAG = True # 打印log开关
 USEMODULE = False # 使用模块
-NOTLOADEXTLIST = 'exmaple1', # 模块排除列表,格式 'exmaple1','exmaple2' + ,
+NOTLOADEXTLIST = 'exmaple1', # 模块排除列表,格式 'exmaple1','exmaple2' + ... ,
 
 # NetConfig
 HTTPPROXY = '' # Http代理
@@ -9,6 +9,7 @@ HTTPSPROXY = 'http://10.0.0.1:7890' # Https代理
 ALLPROXY = '' # 全部代理
 USEBGMAPI = True # 使用BgmApi
 USETMDBAPI = True #使用TMDBApi
+NETERRRECTRYTIMS = 1 # 网络请求错误时的重试次数
 
 # File处理Config
 USELINK = True # 使用硬链接开关
@@ -16,19 +17,9 @@ LINKFAILSUSEMOVEFLAGS = False #硬链接失败时使用MOVE
 RMLOGSFLAG = False # 日志文件超时删除,填数字代表删除多久前的
 MANDATORYCOVER = False # 强制覆盖文件
 
-
 # FileName处理Config
 JELLYFINFORMAT = False # jellyfin 使用 ISO/639 标准 简体和繁体都使用chi做标识
 USETITLTOEP = False # 给每个番剧视频加上番剧Title 
-
-
-
-# QBConfig
-USERQBAPI = True # 使用QBApi
-QBIP = '192.168.1.112' # QB的ip
-QBPORT = 8081 # QBApi端口
-QBUSERNAME = 'admin' # Qb账号
-QBPASSWORD = 'Syn123456!' # Qb密码
 
 # 附加Config
 TIMELAPSE = 0 # 延时处理番剧
